@@ -1,3 +1,8 @@
+2008-12-26  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/commands/base.py: display updated bootstrap modules when
+	checking the bootstrap moduleset changes.  (closes: #565355)
+
 2008-12-23  Paolo Borelli  <pborelli@katamail.com>
 
 	* jhbuild/commands/base.py:
